# ChangeLog for dev-java/ibm-jdk-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.231 2010/10/05 20:28:06 maekke Exp $

  05 Oct 2010; Markus Meier <maekke@gentoo.org>
  ibm-jdk-bin-1.5.0.12_p1.ebuild, ibm-jdk-bin-1.6.0.8_p1.ebuild:
  x86 stable, bug #330663

  28 Sep 2010; Brent Baude <ranger@gentoo.org>
  ibm-jdk-bin-1.5.0.12_p1.ebuild, ibm-jdk-bin-1.6.0.8_p1.ebuild:
  marking ibm-jdk-bin-1.6.0.8_p1 and ibm-jdk-bin-1.5.0.12_p1 for ppc and
  ppc64 for bug 330663

  26 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  ibm-jdk-bin-1.5.0.12_p1.ebuild, ibm-jdk-bin-1.6.0.8_p1.ebuild:
  Stable on amd64 wrt bug #330663

*ibm-jdk-bin-1.6.0.8_p1 (16 Sep 2010)
*ibm-jdk-bin-1.5.0.12_p1 (16 Sep 2010)

  16 Sep 2010; Vlastimil Babka <caster@gentoo.org>
  -ibm-jdk-bin-1.5.0.11.ebuild, +ibm-jdk-bin-1.5.0.12_p1.ebuild,
  +ibm-jdk-bin-1.6.0.8_p1.ebuild:
  Version bump, security bug #330663.

*ibm-jdk-bin-1.6.0.8 (14 May 2010)

  14 May 2010; Vlastimil Babka <caster@gentoo.org>
  +ibm-jdk-bin-1.6.0.8.ebuild:
  Version bump, bug #319533.

  09 Mar 2010; Joseph Jezak <josejx@gentoo.org>
  ibm-jdk-bin-1.5.0.11_p1.ebuild:
  Marked ppc stable for bug #306583.

  08 Mar 2010; Markus Meier <maekke@gentoo.org>
  ibm-jdk-bin-1.5.0.11_p1.ebuild:
  amd64 stable, bug #306583

  28 Feb 2010; Brent Baude <ranger@gentoo.org>
  ibm-jdk-bin-1.5.0.11_p1.ebuild:
  Marking ibm-jdk-bin-1.5.0.11_p1 ppc64 for bug 306583

  24 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  ibm-jdk-bin-1.5.0.11_p1.ebuild:
  stable x86, security bug 306583

*ibm-jdk-bin-1.5.0.11_p1 (23 Feb 2010)

  23 Feb 2010; Vlastimil Babka <caster@gentoo.org>
  +ibm-jdk-bin-1.5.0.11_p1.ebuild:
  Version bump, security bug #306583.

  22 Feb 2010; Vlastimil Babka <caster@gentoo.org>
  -ibm-jdk-bin-1.4.2.13.ebuild, -files/ibm-jdk-bin-1.4.env,
  -ibm-jdk-bin-1.5.0.10.ebuild, -ibm-jdk-bin-1.6.0.6.ebuild, -files/cpuinfo: